--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SY个人高速云 | 资源中心</title>
+  <link rel="icon" type="image/png" href="/path/to/your/favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://fastlist-css.pages.dev/css2.css">
   <link rel="stylesheet" href="https://fastlist-css.pages.dev/css.css">
